# backend

./: CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  README.md  hot-reload-test.sh  hot-reload.sh  main.cpp
controllers/: test_controller.cpp
include/controllers/: auth_controller.h  notification_controller.h  rating_controller.h  service_controller.h  test_controller.h  user_achievement_controller.h  user_controller.h
include/db/: connection_pool.h  utils.h
include/middlewares/: handle_achievements.h  index_middlewares.h  user_validation_middleware.h  verify_jwt.h
include/models/: achievement_model.h  achievement_notification_model.h  community_model.h  notification_mdel.h  notification_model.h  notification_service_model.h  rating_model.h  service_model.h  test_model.h  user_achievement_model.h  user_model.h
include/routes/: auth_routes.h  notification_routes.h  rating_routes.h  service_routes.h  test_routes.h  user_achievement_routes.h  user_routes.h
include/utils/: auth.h  common.h  custom_regex.h  errors.h  user_achievements_handler.h  user_validations.h  utils.h  validations.h
routes/: test_routes.cpp
src/: main.cpp
src/controllers/: auth_controller.cpp  notification_controller.cpp  rating_controller.cpp  service_controller.cpp  test_controller.cpp  test_controller.h  user_achievement_controller.cpp  user_controller.cpp
src/db/: conncection_pool.cpp  utils.cpp
src/middlewares/: handle_achievements.cpp  verify_jwt.cpp
src/models/: achievement_model.cpp  achievement_notification_model.cpp  community_model.cpp  notification_model.cpp  notification_service_model.cpp  rating_model.cpp  service_model.cpp  test_model.cpp  test_model.h  user_achievement_model.cpp  user_model.cpp  user_model.h
src/routes/: auth_routes.cpp  auth_routes.h  notification_routes.cpp  rating_routes.cpp  service_routes.cpp  test_routes.cpp  test_routes.h  user_achievement_routes.cpp  user_routes.cpp
src/utils/: auth.cpp  common.cpp  custom_regex.cpp  errors.cpp  user_achievements_handler.cpp  user_validations.cpp  utils.cpp  validations.cpp
test/: CMakeLists.txt  TEST_README.md
test/tests/: auth_routes_test.cpp  common.cpp  common.h  main.cpp  service_routes_test.cpp  test_one.cpp
test/tests/auth/: lgoin.md  login.md  login_test.cpp  register_test.cpp
test/tests/ratings/: create_rating_test.cpp  get_service_rating_test.cpp  get_user_ratings_test.cpp
test/tests/services/: create_service.md  create_service_test.cpp  delete_service_test.cpp  get_all_services_test.cpp  get_service_test.cpp  get_services.md  get_services_self_test.cpp  update_service_test.cpp
test/tests/users/: delete_user_test.cpp  update_user_admin_test.cpp
test_setup/: CMakeLists.txt
test_setup/tests/: main.cpp  test_one.cpp
